--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -14,6 +14,9 @@ install git
 install mercurial
 install subversion
 
+# install freetds - dependency for rubygem 'tiny_tds'
+install freetds
+
 install z
 
 # Remove outdated versions from the cellar
