--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -19,6 +19,7 @@ brew install urlview
 brew install wget
 brew install wifi-password
 brew install z
+brew install imagemagick
 
 # JavasScript related stuff
 brew install nvm
@@ -30,6 +31,9 @@ brew install postgresql
 brew install sqlite3
 brew install redis
 brew install freetds
+
+# servers
+brew install nginx
 
 brew install gifify
 brew install svgo
