Don't install video processing libs for now
I don't use them at the moment, and the "ffmpeg" library has a lot of
dependencies, so it's better to skip this for the moment if not used.

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -9,8 +9,8 @@ brew install git
 brew install git-extras
 
 # youtube-dl and dependencies for post processing
-brew install youtube-dl
-brew install ffmpeg
+# brew install youtube-dl
+# brew install ffmpeg
 
 # utilities
 brew install pwgen
